6703552: Missing files from changeset for 6701459
Previous push missed a small number of files.

Reviewed-by: dfuchs